[gd_scene load_steps=7 format=3 uid="uid://cl2yue7rhynf7"]

[ext_resource type="Script" path="res://scripts/lost.gd" id="1_1y3d0"]
[ext_resource type="Texture2D" uid="uid://dux2id3ro3uwp" path="res://assets/img/Lost.png" id="1_t2gxh"]
[ext_resource type="Texture2D" uid="uid://7wq6qjf0wd2m" path="res://assets/img/buttons/exitButton.png" id="2_ixwpm"]
[ext_resource type="Texture2D" uid="uid://dmtxetv3vy6f7" path="res://assets/img/buttons/titleButton.png" id="4_286nm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1hoyf"]
bg_color = Color(0.6, 0.643137, 0.6, 0.254902)

[sub_resource type="LabelSettings" id="LabelSettings_v6w5r"]
font_size = 32

[node name="lost" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1y3d0")

[node name="LostiMG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -278.0
offset_right = 1028.0
offset_bottom = 746.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.4, 1.4)
texture = ExtResource("1_t2gxh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 92.0
offset_right = 977.0
offset_bottom = 581.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1hoyf")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.5
offset_top = -209.5
offset_right = 137.5
offset_bottom = 209.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Sowwy! You lost :("
label_settings = SubResource("LabelSettings_v6w5r")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Button" type="TextureButton" parent="Panel/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_ixwpm")
stretch_mode = 4

[node name="Control2" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Button2" type="TextureButton" parent="Panel/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_286nm")

[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button2" to="." method="_on_title_pressed"]
